# techsdrf

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
additional/: README.md  enviroment.yml
additional/opt-params/: README.md  convert_all_raw.sh  general-sage-ptms-full.json  general-sage-ptms.json  general-sage.json  opt_params.py  param_medic.py
src/sdrf_refiner/: __init__.py  cli.py  config.py  downloader_base.py  downloader_factory.py
src/sdrf_refiner/analyzer/: __init__.py  ms_analyzer.py  ptm_detector.py  tolerance_estimator.py
src/sdrf_refiner/converter/: __init__.py  converter.py
src/sdrf_refiner/core/: __init__.py  refiner.py
src/sdrf_refiner/massive/: __init__.py  downloader.py
src/sdrf_refiner/pride/: __init__.py  downloader.py
src/sdrf_refiner/report/: __init__.py  confidence.py  generator.py
src/sdrf_refiner/sdrf/: __init__.py  comparer.py  ontology.py  reader.py  writer.py
src/sdrf_refiner/utils/: __init__.py  logging.py  temp_manager.py
tests/: __init__.py  conftest.py  test_comparer.py  test_confidence.py  test_integration_pxd010364.py  test_reader.py  test_tolerance_estimator.py  test_writer.py
tests/fixtures/: minimal_sdrf.tsv  sample_sdrf.tsv  sdrf_with_duplicate_columns.tsv  sdrf_with_metadata.tsv
