[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techsdrf"
version = "1.0.0"
description = "Validate and refine SDRF files using empirical MS data analysis"
authors = [
    { name = "PRIDE Team", email = "pride-support@ebi.ac.uk" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["proteomics", "mass-spectrometry", "SDRF", "metadata", "PRIDE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "click>=8.0",
    "pyteomics>=4.5",
    "sdrf-pipelines>=0.0.25",
    "pridepy>=0.0.4",
    "requests>=2.28",
    "python-dateutil>=2.8",
    "runassessor @ git+https://github.com/RunAssessor/RunAssessor.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.10",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/PRIDE-Archive/techsdrf"
Issues = "https://github.com/PRIDE-Archive/techsdrf/issues"

[project.scripts]
techsdrf = "sdrf_refiner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
